Display both registration and sharing UI

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>H5P Hub Publish UI</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="register"></div>
+    <div id="publish"></div>
   </body>
 </html>
