JI-1736 Add right link and fix keyboard navigation

--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
     // Registration
     const registrationURL = 'http://localhost/d7/post.php';
     const registrationTitle = 'Hub Registration and End User License Agreement (EULA)';
-    const licenseLink = 'https://h5p.org/';
+    const licenseLink = 'https://h5p.org/hub-terms';
     const accountSettingsUrl= '';
 
     document.addEventListener("DOMContentLoaded", function() {
