--- a/index.html
+++ b/index.html
@@ -138,107 +138,82 @@
     ];
     const disciplines = [
       {
-        "id": "1",
-        "name": "Humanities",
-        "children": [
-          {
-            "id": "10",
-            "name": "Arts",
-            "children": [
-              {
-                "id": "100",
-                "name": "Performing Arts"
-              },
-              {
-                "id": "101",
-                "name": "Visual Arts"
-              }
-            ]
-          },
-          {
-            "id": "11",
-            "name": "History"
-          },
-          {
-            "id": "12",
-            "name": "Languages and literature"
-          },
-          {
-            "id": "13",
-            "name": "Philosophy"
-          },
-          {
-            "id": "14",
-            "name": "Theology"
-          }
-        ]
+        "name": "arts-and-humanities",
+        "parent": null,
+        "translation": null
       },
       {
-        "id": "2",
-        "name": "Social sciences",
-        "children": [
-          {
-            "id": "21",
-            "name": "Anthropology"
-          },
-          {
-            "id": "22",
-            "name": "Archaeology"
-          },
-          {
-            "id": "23",
-            "name": "Economics"
-          },
-          {
-            "id": "24",
-            "name": "Human geography"
-          },
-          {
-            "id": "25",
-            "name": "Political science"
-          },
-          {
-            "id": "26",
-            "name": "Psychology"
-          },
-          {
-            "id": "27",
-            "name": "Sociology"
-          },
-          {
-            "id": "28",
-            "name": "Social Work"
-          }
-        ]
+        "name": "business",
+        "parent": null,
+        "translation": null
       },
       {
-        "id": "3",
-        "name": "Natural Sciences",
-        "children": [
-          {
-            "id": "31",
-            "name": "Biology"
-          },
-          {
-            "id": "32",
-            "name": "Chemistry"
-          },
-          {
-            "id": "33",
-            "name": "Earth science"
-          },
-          {
-            "id": "34",
-            "name": "Space sciences"
-          },
-          {
-            "id": "35",
-            "name": "Physics"
-          }
-        ]
+        "name": "engineering",
+        "parent": null,
+        "translation": null
+      },
+      {
+        "name": "law",
+        "parent": null,
+        "translation": null
+      },
+      {
+        "name": "life-sciences",
+        "parent": null,
+        "translation": null
+      },
+      {
+        "name": "medicine-and-health-sciences",
+        "parent": null,
+        "translation": null
+      },
+      {
+        "name": "education",
+        "parent": null,
+        "translation": null
+      },
+      {
+        "name": "bilingual-multilingual-and-multicultural-education",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "community-college-leadership",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "curriculum-and-instruction",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "curriculum-and-social-inquiry",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "disability-and-equity-in-education",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "early-childhood-education",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "economics",
+        "parent": "education",
+        "translation": null
+      },
+      {
+        "name": "architecture",
+        "parent": null,
+        "translation": "Architecture"
       }
     ];
-    
+
     const languages = [
       {
         "id": "en",
