HFP-3045 Add content hub validatio

--- a/index.html
+++ b/index.html
@@ -100,7 +100,9 @@
       "accountDetailsLinkText": "here",
       "registrationTitle": "Hub Registration and End User License Agreement (EULA)",
       "registrationFailed": "An error occured",
-      "registrationFailedDescription": "We were not able to create an account at this point. Something went wrong. Try again later."
+      "registrationFailedDescription": "We were not able to create an account at this point. Something went wrong. Try again later.",
+      "maxLength": ":length is the maximum number of characters",
+      "keywordExists": "Keyword already exists!"
     };
 
     const licenses = [
@@ -331,6 +333,30 @@
         "name": "bg",
         "translation": "Bulgarian"
       },
+      {
+        "name": "en",
+        "translation": "Enblish"
+      },
+      {
+        "name": "nb",
+        "translation": "Norwegian bokmål"
+      },
+      {
+        "name": "da",
+        "translation": "Danish"
+      },
+      {
+        "name": "nl",
+        "translation": "Dutch"
+      },
+      {
+        "name": "fr",
+        "translation": "French"
+      },
+      {
+        "name": "it",
+        "translation": "Italian"
+      }
     ];
 
     const levels = [
