--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       "longDescription": "Long description",
       "icon": "Icon",
       "screenshots": "Screenshots",
-      "helpChoosingLicense": "Help me choose a license",
+      "licenseDetails": "License details",
       "shareFailed": "Share failed.",
       "shareTryAgain": "Something went wrong, please try to share agian.",
       "pleaseWait": "Please wait...",
