Fix type and remove console.log

--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
       },
       {
         "name": "en",
-        "translation": "Enblish"
+        "translation": "English"
       },
       {
         "name": "nb",
