--- a/index.html
+++ b/index.html
@@ -394,8 +394,7 @@
         accountSettingsUrl: accountSettingsUrl
       });
 
-      H5PHub.createSharingUI({
-        container: document.getElementById('sharing'),
+      H5PHub.createSharingUI(document.getElementById('sharing'), {
         l10n: l10n,
         metadata: {
           licenses: licenses,
