HFP-3107 Make 'remove' button more accessible

--- a/index.html
+++ b/index.html
@@ -102,7 +102,9 @@
       "registrationFailed": "An error occured",
       "registrationFailedDescription": "We were not able to create an account at this point. Something went wrong. Try again later.",
       "maxLength": ":length is the maximum number of characters",
-      "keywordExists": "Keyword already exists!"
+      "keywordExists": "Keyword already exists!",
+      "remove": "Remove",
+      "removeImage": "Remove image"
     };
 
     const licenses = [
