--- a/index.html
+++ b/index.html
@@ -104,7 +104,11 @@
       "maxLength": ":length is the maximum number of characters",
       "keywordExists": "Keyword already exists!",
       "remove": "Remove",
-      "removeImage": "Remove image"
+      "removeImage": "Remove image",
+      "cancelPublishConfirmationDialogTitle": "Cancel sharing",
+      "cancelPublishConfirmationDialogDescription": "Are you sure you want to cancel the sharing process?",
+      "cancelPublishConfirmationDialogCancelButtonText": "No",
+      "cancelPublishConfirmationDialogConfirmButtonText": "Yes"
     };
 
     const licenses = [
