--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+H<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -98,7 +98,7 @@
       "successfullyRegistred": "You have successfully registered an account on the H5P Hub",
       "successfullyRegistredDescription": "You account details can be changed",
       "accountDetailsLinkText": "here",
-      "registrationTitle": "Hub Registration",
+      "registrationTitle": "H5P Hub Registration",
       "registrationFailed": "An error occured",
       "registrationFailedDescription": "We were not able to create an account at this point. Something went wrong. Try again later.",
       "maxLength": ":length is the maximum number of characters",
