HFP-3120 Display error tip when disciplines limit reached

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@ H<html>
         "in": "in",
         "dropdownButton": "Dropdown button"
       },
+      "disciplineLimitReachedMessage": "You can select up to :numDisciplines disciplines",
       "removeChip": "Remove :chip from the list",
       "keywordsPlaceholder": "Add keywords",
       "keywords": "Keywords",
