JI-1958 Change behaviour of discipline selector
The discipline selector now has an add button instead of checkbox to avoid problem related to the hiearchy list.
The selected disciplines are restricted to 10.
The ancestors are included when sending the data.

--- a/index.html
+++ b/index.html
@@ -109,7 +109,8 @@ H<html>
       "cancelPublishConfirmationDialogTitle": "Cancel sharing",
       "cancelPublishConfirmationDialogDescription": "Are you sure you want to cancel the sharing process?",
       "cancelPublishConfirmationDialogCancelButtonText": "No",
-      "cancelPublishConfirmationDialogConfirmButtonText": "Yes"
+      "cancelPublishConfirmationDialogConfirmButtonText": "Yes",
+      "add": "Add"
     };
 
     const licenses = [
