--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@ H<html>
       "share": "Share",
       "close": "Close",
       "registerOnHub": "Register on the Hub",
+      "updateRegistrationOnHub": "Save account settings",
       "requiredInfo": "Required Info",
       "optionalInfo": "Optional Info",
       "reviewAndShare": "Review & Share",
@@ -98,6 +99,7 @@ H<html>
       "licenseLinkText": "H5P Hub terms of use",
       "successfullyRegistred": "You have successfully registered an account on the H5P Hub",
       "successfullyRegistredDescription": "You account details can be changed",
+      "successfullyUpdated": "Your H5P Hub account settings have successfully been changed",
       "accountDetailsLinkText": "here",
       "registrationTitle": "H5P Hub Registration",
       "registrationFailed": "An error occured",
