JI-2149 Add age widget

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-H<html>
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -112,7 +112,9 @@ H<html>
       "cancelPublishConfirmationDialogDescription": "Are you sure you want to cancel the sharing process?",
       "cancelPublishConfirmationDialogCancelButtonText": "No",
       "cancelPublishConfirmationDialogConfirmButtonText": "Yes",
-      "add": "Add"
+      "add": "Add",
+      "age": "Typical age",
+      "ageDescription": "The target audience of this content. Possible put formats separated by commas: \"1,34-45,-50,59-\".",
     };
 
     const licenses = [
