--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
       "add": "Add",
       "age": "Typical age",
       "ageDescription": "The target audience of this content. Possible put formats separated by commas: \"1,34-45,-50,59-\".",
+      "invalidAge": "Invalid input format for Typical age. Possible input formats separated by commas: \"1, 34-45, -50, -59-\".",
     };
 
     const licenses = [
