JI-2149 Adjust color of error message
Fix typo

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
       "cancelPublishConfirmationDialogConfirmButtonText": "Yes",
       "add": "Add",
       "age": "Typical age",
-      "ageDescription": "The target audience of this content. Possible put formats separated by commas: \"1,34-45,-50,59-\".",
+      "ageDescription": "The target audience of this content. Possible input formats separated by commas: \"1,34-45,-50,59-\".",
       "invalidAge": "Invalid input format for Typical age. Possible input formats separated by commas: \"1, 34-45, -50, -59-\".",
     };
 
